tests/NormalTests/paczka2/big_fuzzy/49488835.err
Error in line 3: ZFCq A376 5,7
Error in line 6: QUI A749 80,3
Error in line 8: QUI S206 69,3
Error in line 12: QUI A749 21,6
Error in line 46: HIk7s5Z S206 34,2
Error in line 64: 8oiFd3T A749 &&6,1
Error in line 61: 8oiFd3T A749 52,7
Error in line 66: QUI A376 35,7
Error in line 63: HIk7s5Z A376 91,6
Error in line 80: QUI S206 83,2
Error in line 79: Rxv28a4r A749 72,4
Error in line 81: QUI A376 96,9
Error in line 92: HIk7s5Z S206 17,8
Error in line 100: pVFpNr A749 45,49
Error in line 96: HIk7s5Z S972 28,2
Error in line 109: HIk7s5Z A749 34,9
Error in line 114: Rxv28a4r S972 80,3
Error in line 110: HIk7s5Z S972 82,5
Error in line 117: HIk7s5Z A749 60,8
Error in line 95: QUI A749 91,7
Error in line 123: QUI S972 54,91
Error in line 90: ZFCq A376 0,0
Error in line 129: QUI S206 V3,6
Error in line 99: pVFpNr A749 40,6
Error in line 130: pVFpNr A376 49,6
Error in line 128: ZFCq A749 70,7
Error in line 131: pVFpNr A749 91,8
Error in line 139: HIk7s5Z A376 38,7
Error in line 132: QUI S206 53,3
Error in line 149: QUI S972 98,3
Error in line 155: pVFpNr S972 23,5
Error in line 162: HIk7s5Z S206 72,1
Error in line 172: pVFpNr A376 28,0
Error in line 165: HIk7s5Z A376 45,3
Error in line 179: ZFCq S972 69,2
Error in line 198: HIk7s5Z A749 90,0
Error in line 199: HIk7s5Z A376 56,8
Error in line 210: 8oiFd3T A749 28,45
Error in line 170: QUI S972 19,7
Error in line 212: 8oiFd3T A749 14,5
Error in line 204: S206 A376 17,4
Error in line 203: Rxv28a4r S972 67,3
Error in line 220: ZFCq S972 124,8
Error in line 217: HIk7s5Z S972 34,8
Error in line 224: 8oiFd3T S206 58,6
Error in line 236: 8oiFd3T A749 76,9
Error in line 243: 8oiFd3T A376 52,76
Error in line 240: S206 A376 96,9
